# bel_keyboard

./: .gitignore  .mxproject  CMakeLists.txt  gcc-arm-none-eabi.cmake
Core/Inc/: main.h  stm32l4xx_it.h
Core/Src/: freertos.c  gpio.c  main.c  stm32l4xx_hal_msp.c  stm32l4xx_hal_timebase_tim.c  stm32l4xx_it.c  usart.c
Debug/: bel_keyboard.elf  bel_keyboard.list  bel_keyboard.map  makefile  objects.list
Debug/Core/Src/: freertos.cyclo  freertos.d  freertos.su  gpio.cyclo  gpio.d  gpio.su  main.cyclo  main.d  main.su  stm32l4xx_it.cyclo  stm32l4xx_it.su  subdir.mk  usart.cyclo  usart.d  usart.su
Debug/Drivers/STM32L4xx_HAL_Driver/Src/: subdir.mk
